<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hub"
    tools:context=".Registo">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:paddingStart="8dp"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:paddingStart="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewREG" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:paddingStart="8dp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textEmailAddress"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/confpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:paddingStart="8dp"
        android:hint="@string/confirmar_palavra_passe"
        android:inputType="textPassword"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btnEntrarLogin"
        android:layout_width="107dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bottom_bar_shape"
        android:text="@string/registar"
        android:textColor="@color/hub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTermos" />

    <CheckBox
        android:id="@+id/checkBoxTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:buttonTint="@color/pon"
        android:text="@string/eu_aceito_os"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confpassword" />

    <TextView
        android:id="@+id/txtTermos"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="65dp"
        android:clickable="true"
        android:gravity="center|center_horizontal"
        android:text="@string/termos_e_condi_es"
        android:textColor="@color/pon"
        android:textSize="14sp"
        android:textStyle=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxTermos"
        app:layout_constraintTop_toBottomOf="@+id/confpassword" />

    <TextView
        android:id="@+id/textViewREG"
        android:layout_width="267dp"
        android:layout_height="65dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/karma_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:text="REGISTO"
        android:textAllCaps="true"
        android:textColor="@color/pon"
        android:textSize="58sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>