<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hub"
    tools:context=".Recuperarpw">

    <EditText
        android:id="@+id/confpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:hint="@string/confirmar_nova_palavra_passe"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:hint="@string/nova_palavra_passe"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retang"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:textColor="@color/pon"
        android:textColorHint="@color/pon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRCPW" />

    <TextView
        android:id="@+id/textViewRCPW"
        android:layout_width="376dp"
        android:layout_height="129dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/karma_semibold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/recuperar_a_palavra_passe"
        android:textColor="@color/pon"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRecuppw"
        android:layout_width="107dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bottom_bar_shape"
        android:text="@string/recuperar"
        android:textColor="@color/hub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>